--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
-	Inspired by Indus
-	Luis Arano
+	Inspired by Indus;
+	By Luis Arano
 	Released for free under the Creative Commons Attribution 3.0 license
 -->
 
